# rs-templating

./: Cargo.toml  Makefile  README.md
bindings/golang/: go.mod  main.go
bindings/golang/ffitemplating/: ffitemplatig_musl.go  ffitemplating.go  ffitemplating_test.go  lib_ffi.h
bindings/ruby/: main.rb
src/: lib.rs  lib_ffi.rs  main.rs  rs_templating.rs
